Bug 408701 - Crash at restore page > Start New Session
Summary: Crash at restore page > Start New Session
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1.0
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-14 17:47 UTC by Juraj
Modified: 2023-11-23 19:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.08.4
Sentry Crash Report:


Attachments
Screen recording of Falkon crashing on FreeBSD-CURRENT (2.28 MB, video/mp4)
2020-01-19 12:00 UTC, Graham Perrin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Juraj 2019-06-14 17:47:10 UTC
SUMMARY
Falkon crashes when the button "Start new session" on Restore page is pressed.

STEPS TO REPRODUCE
1. Somehow make Falkon "crash" for it to display Restore page at next start
2. Start Falkon
3. Press "Start new session" button

OBSERVED RESULT
Falkon crashed. On next startup it shows empty restore page.

EXPECTED RESULT
New session is started

SOFTWARE/OS VERSIONS
Operating System: Artix 
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.57.0
Qt Version: 5.12.3
Kernel Version: 4.19.36-1-lts
OS Type: 64-bit

ADDITIONAL INFORMATION
It also crashed on development version.
Comment 1 Graham Perrin 2020-01-19 12:00:57 UTC
Created attachment 125239 [details]
Screen recording of Falkon crashing on FreeBSD-CURRENT

Spun off from FreeBSD bug: 

243362 – www/falkon crash at or soon after launch time
https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=243362
Comment 2 Graham Perrin 2020-01-19 12:04:43 UTC
Juraj, is this bug still reproducible? 

If so: what are your system settings for application style and for window decorations?
Comment 3 Juraj 2020-01-19 12:28:21 UTC
Yes I can still reproduce.

my settings ?
OS: Artix Linux
QT Version: 5.14
Falkon: Application version 3.1.99 (91612fcb) (but it should not matter because there were not drastic changes in this area)
WM: OpenBox
Compositom: compton > picon
WM theme: probably Carbon or some dark one (sorry too lazy to check this one)
Qt Theme managed by qt5ct
Qt theme engine: Kvantum
Kvantum theme: Fluent-Dark
Linux Kernel: 4.19.xx

To be honest it took me a long while to get Falkon to display that restore page.
Comment 4 Graham Perrin 2020-01-19 18:05:59 UTC
Thanks. 

In my (FreeBSD-CURRENT) case I worked around the bug by temporarily changing: 

* application style to Oxygen; and
* window decorations to Oxygen.
Comment 5 bsduck 2021-06-28 17:13:30 UTC
I can reproduce too.

How to easily get the session restore page:
1. Open a website in Falkon
2. Kill the Falkon process
3. Start Falkon again
Comment 6 Juraj 2023-11-23 19:44:51 UTC
Git commit 36b13e452d29640c275577617d69c8e7f17ecede by Juraj Oravec.
Committed on 23/11/2023 at 20:37.
Pushed by jurajo into branch 'master'.

Fix crash when starting new session after crash
FIXED-IN: 23.08.4

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +12   -1    src/lib/session/recoveryjsobject.cpp

https://invent.kde.org/network/falkon/-/commit/36b13e452d29640c275577617d69c8e7f17ecede
Comment 7 Juraj 2023-11-23 19:49:41 UTC
Git commit 709c047ac891f6d43077e5e5c41b3c1c86285130 by Juraj Oravec.
Committed on 23/11/2023 at 20:48.
Pushed by jurajo into branch 'release/23.08'.

Fix crash when starting new session after crash
FIXED-IN: 23.08.4

CherryPicked from: 36b13e452d29640c275577617d69c8e7f17ecede

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +12   -1    src/lib/session/recoveryjsobject.cpp

https://invent.kde.org/network/falkon/-/commit/709c047ac891f6d43077e5e5c41b3c1c86285130