Fix crash when starting new session after crash

BUG: 408701
FIXED-IN: 23.08.4

CherryPicked from: 36b13e452d29640c275577617d69c8e7f17ecede

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>